err.log
   Compiling libusb1-sys v0.7.0
   Compiling rusb v0.9.4
    Checking rtl-sdr-rs v0.3.1
    Checking desperado v0.3.0
    Checking siren v0.4.0 (C:\Users\pixel\Downloads\twister)
error[E0277]: the trait bound `[Rgba<u8>]: AsPixels<Rgba<u8>>` is not satisfied
   --> src\main.rs:481:25
    |
480 |                     let img = slint::Image::from_rgba8(slint::SharedPixelBuffer::clone_from_slice(
    |                                                        ------------------------------------------ required by a bound introduced by this call
481 |                         pixels.as_slice(), 128, 64
    |                         ^^^^^^^^^^^^^^^^^ the trait `rgb::legacy::internal::convert::AsPixels<rgb::formats::rgba::Rgba<u8>>` is not implemented for `[rgb::formats::rgba::Rgba<u8>]`
    |
    = help: the following other types implement trait `rgb::legacy::internal::convert::AsPixels<PixelType>`:
              `[T]` implements `rgb::legacy::internal::convert::AsPixels<rgb::formats::abgr::Abgr<T>>`
              `[T]` implements `rgb::legacy::internal::convert::AsPixels<rgb::formats::argb::Argb<T>>`
              `[T]` implements `rgb::legacy::internal::convert::AsPixels<rgb::formats::bgr::Bgr<T>>`
              `[T]` implements `rgb::legacy::internal::convert::AsPixels<rgb::formats::bgra::Bgra<T>>`
              `[T]` implements `rgb::legacy::internal::convert::AsPixels<rgb::formats::gray::Gray_v08<T>>`
              `[T]` implements `rgb::legacy::internal::convert::AsPixels<rgb::formats::gray_alpha::GrayAlpha_v08<T>>`
              `[T]` implements `rgb::legacy::internal::convert::AsPixels<rgb::formats::grb::Grb<T>>`
              `[T]` implements `rgb::legacy::internal::convert::AsPixels<rgb::formats::rgb::Rgb<T>>`
              `[T]` implements `rgb::legacy::internal::convert::AsPixels<rgb::formats::rgba::Rgba<T>>`
note: required by a bound in `SharedPixelBuffer::<Pixel>::clone_from_slice`
   --> C:\Users\pixel\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\i-slint-core-1.15.1\graphics\image.rs:141:28
    |
135 |     pub fn clone_from_slice<SourcePixelType>(
    |            ---------------- required by a bound in this associated function
...
141 |         [SourcePixelType]: rgb::AsPixels<Pixel>,
    |                            ^^^^^^^^^^^^^^^^^^^^ required by this bound in `SharedPixelBuffer::<Pixel>::clone_from_slice`
    = note: the full name for the type has been written to 'C:\Users\pixel\Downloads\twister\target\debug\deps\siren-ba84f77a4c3d2a61.long-type-6545579225459045444.txt'
    = note: consider using `--verbose` to print the full type name to the console

warning: unused variable: `s`
   --> src\main.rs:610:9
    |
610 |     let s = state.clone();
    |         ^ help: if this is intentional, prefix it with an underscore: `_s`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0277`.
warning: `siren` (bin "siren") generated 1 warning
error: could not compile `siren` (bin "siren") due to 1 previous error; 1 warning emitted
